добавил текстовые отзывы на пользователя и изменил его модель
