# backend/internal/controller/interaction/product/handler.go
@@ -1,4 +1,4 @@
-package interaction
+package product
 
 import (
 	"api/internal/controller"
